--- a/pom.xml
+++ b/pom.xml
@@ -58,5 +58,10 @@
 				<artifactId>guava</artifactId>
 				<version>11.0.1</version>
 			</dependency>
+			<dependency>
+				<groupId>org.mockito</groupId>
+				<artifactId>mockito-core</artifactId>
+				<version>1.9.0</version>
+			</dependency>
   </dependencies>
 </project>
