--- a/pom.xml
+++ b/pom.xml
@@ -77,6 +77,21 @@
 				<artifactId>slf4j-log4j12</artifactId>
 				<version>1.6.4</version>
 			</dependency>
+			 <dependency>
+				<groupId>org.xerial</groupId>
+				<artifactId>sqlite-jdbc</artifactId>
+				<version>3.6.0</version>
+			</dependency>
+			<dependency>
+				<groupId>knzn</groupId>
+				<artifactId>base</artifactId>
+				<version>0.1.3</version>
+			</dependency>
+			<dependency>
+				<groupId>commons-dbcp</groupId>
+				<artifactId>commons-dbcp</artifactId>
+				<version>1.4</version>
+			</dependency>
   </dependencies>
 
 	<build>
