--- a/pom.xml
+++ b/pom.xml
@@ -92,6 +92,11 @@
 				<artifactId>commons-dbcp</artifactId>
 				<version>1.4</version>
 			</dependency>
+			<dependency>
+				<groupId>com.google.code.jcouchdb</groupId>
+				<artifactId>jcouchdb</artifactId>
+				<version>1.0.1-1</version>
+			</dependency>
   </dependencies>
 
 	<build>
